--- a/individual_assignment/ia1/ia1.tex
+++ b/individual_assignment/ia1/ia1.tex
@@ -15,15 +15,16 @@
 
 \noindent\textit{ratio} = approximation ratio variable.
 
-\noindent To calculate the approximation ratio, check each observation
+\vspace{2mm}
+To calculate the approximation ratio, check each observation
 for compatibility with \textit{order}.
 
-\noindent For each compatible observation, add one to \textit{ratio}.
+For each compatible observation, add one to \textit{ratio}.
 
-\noindent When all observations have been accounted for, divide \textit{ratio}
+When all observations have been accounted for, divide \textit{ratio}
 by the number of observations.
 
-\noindent Shuffle \textit{order} until an approximation
+Shuffle \textit{order} until an approximation
 ratio of at least 0.2 is reached.
 
 \subsection{Pseudo code}
@@ -33,11 +34,11 @@ ratio of at least 0.2 is reached.
 For a given ordered list of genes $(x_0, x_1, ... , x_n)$ each
 observation is a set of three genes $(x_i, x_j, x_k)$.
 
-\noindent For an observation to be compatible with the order of the list,
+For an observation to be compatible with the order of the list,
 the elements in the observation must be in some specific order
 in the list.
 
-\noindent The list can only order the observed elements in one of
+The list can only order the observed elements in one of
 the following six ways:
 
 \begin{enumerate}
@@ -54,15 +55,29 @@ the following six ways:
 \item $(x_k, x_j, x_i)$
 \end{enumerate}
 
-\noindent The observation is compatible with orders 1 and 6, or 
+The observation is compatible with orders 1 and 6, or 
 $1/3$ out of the available orders. 
 
-\noindent This means that the probability that any observation is
+This means that the probability that any observation is
 compatible with any order is $1/3$.
 
-\noindent When re-shuffling the order \textit{k} times, $Pr[ratio \ge 0.2] = 1 - \prod_{1}^{k} Pr[ratio < 0.2] = 1$ given a great enough \textit{k}
+\[Pr[ratio \ge 0.2] = 1 - (1/3)^m\]
 
-\noindent When \textit{m} is bigger, $Pr[ratio > 0.2]$ is bigger,
-the worst case is when $\textit{m} = 1$, then $Pr[ratio \ge 0.2] = Pr[ratio = 1.0] = 1/3$.
+When re-shuffling the order \textit{k} times, 
+
+\[Pr[ratio \ge 0.2] = 1 - \prod_{1}^{k} Pr[ratio < 0.2] = 1\]
+
+given a great enough \textit{k}.
+
+If choosing $k = 100$, $Pr[ratio < 0.2] = 2.5*10^{-18}$.
+
+\subsection{Time complexity analysis}
+
+Shuffling a list is $O(n)$, 
+calculating the \textit{ratio} is $O(m)$ and
+these operations are executed \textit{k} times where \textit{k} is some constant.
+
+\vspace{1mm}
+The resulting time complexity is $O(n+m)$.
 
 \end{document}
