--- a/review/review.tex
+++ b/review/review.tex
@@ -12,41 +12,67 @@
 I had to look up the problem definition on Wikipedia to understand what the problem was.
 "A vertex cover is a set of vertices that "covers" all edges." This sentence means nothing to me,
 I would need an explanation of the meaning of "covers" in this context to understand the problem.
+I think an example picture would suffice to properly explain the problem.
+\newline
+\textbf{Note:} The explanation seems to be sufficient for me NOW, after looking it up, but at first
+look it didn't make sense.
 
 \subsection{Algorithm 1}
 Algorithm description is OK. There is no explanation provided for the approximation ratio. 
-
+\newline
 The question below it is confusing to me, how can a vertex cover
 have a size k? Does this mean that the cover should include exactly k nodes or k edges? Something else?
+\newline
+\textbf{Note:} After explanation from a TA I understand what k is but k should still be better explained in the slides
+to make life easier for everyone.
 
 \subsection{Algorithm 2}
 No complaints here except that I still don't know what k represents.
 
 \subsection{Algorithm 3}
 At this point I think k is some limit on how many nodes can be in S.
-The algorithm description is understandable.
-
+The algorithm description is understandable but the case where both recursions returns a set S
+is not covered, I assume some check is made to see which is the smaller set and then return that one.
+\newline
 The example run drawn during lecture is just a graph, means nothing to me.
-
-The images in the Analysis section is very hard to understand.
-
+\newline
+The hand drawn images in the Analysis section is very hard to read.
+\newline
 In the third point of the time complexity section it should be "nodes" or "node(s)" instead of just "node".
-Apart form that the analysis is OK.
-
+Apart form that the analysis is OK and quite easy to understand.
+\newline
 The first time OPT is defined is in the "Correctness of ALG3" section, the definition should be at the first
 occurrence.
 
 \subsection{Parameterized Problems}
-I'm not familiar with 3-SAT so the definition is a bit hard to understand.
+I'm not familiar with 3-SAT so that example is a bit hard to understand.
+\newline
+This is otherwise quite easy to understand as there are so many examples.
+Same with the FPT slide.
 
 \section{Kernelization}
 \subsection{Motivation}
 Please recreate the image digitally for better clarity.
+Apart from the image, the description is easy to understand.
 
 \subsection{Heuristic}
 Please recreate all images digitally for better clarity.
+I was not previously aware that the degree of a node is how many edges connects to it, this should probably
+be explained in the slide.
+Apart from these problems the description is nice.
 
 \subsection{Algorithm 4}
-Description and pseudo code easy to understand.
+Step 4 is not obvious to me, please provide an explanation as to why $OPT(G)>k$ should be returned here.
+The analysis is overall pretty cluttered, should be spread out over at least 2 slides instead of the one and
+use the same font size as the rest of the slides instead of the smaller variant.
+Because of the smaller font and big block of text this analysis feels quite overwhelming.
+
+\section{Final notes}
+Overall I understood the presentation much better at my second pass of reading through it.
+Seems to me that most of the presentation is made to work in a classroom and not to be read
+at home. My biggest issues is the vague definitions of some variables like k, OPT and "cover"
+and that all images are hand drawn instead of digitally created.
+\newline
+I think that if these issues are addressed the presentation would be much easier to understand for everyone.
 
 \end{document}
